# frontend-study-lab

./: .gitignore  CNAME  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  docker-compose.yml  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  bot-mention.yml  bot-scheduled.yml  ci.yml  codeql.yml  deploy.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: aa6726c11f09_initial_schema.py
backend/app/: catalog.py  config.py  database.py  main.py
backend/app/data/: modules.json
backend/app/models/: __init__.py  progress.py  user.py
backend/app/routes/: auth.py  deps.py  progress.py
backend/app/schemas/: __init__.py  progress.py  user.py
backend/app/services/: auth.py  progress.py
backend/app/utils/: jwt.py
backend/scripts/: gen_catalog.py
backend/tests/: conftest.py  test_auth.py  test_oauth_callback.py  test_progress.py
docs/: AGENTS-TEST.md  AGENTS.md  ARCHITECTURE-EXAMPLE.md  AUTH.md  MIGRATION.md  plan-backend.md  plan-frontend.md  skeleton.md
frontend/: .env.example  App.vue  app.vue  env.d.ts  eslint.config.mjs  index.html  main.ts  playwright.config.ts  router.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/api/: auth.ts  client.ts  progress.ts  types.ts
frontend/components/: LanguageSwitcher.vue
frontend/composables/: useAuthGuard.ts  useCelebration.ts  (+3 more)
(+102 files in other folders)
