[project]
name = "studylab-backend"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# conftest sets env vars before importing the app — imports can't be at top
"tests/conftest.py" = ["E402"]
